--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
 
                 <!-- Blog Categories Well -->
                 <div class="well">
-                    <h4>Categorias [{% block categoria_num %}{% endblock %}]</h4>
+                    <h4>Categorias</h4>
                     <div class="row">
                         <div class="col-lg-12">
                             <ul class="list-unstyled">
